--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/RoseLuu/roseluu-Portfolio-React",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-pdf": "4.1.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -40,6 +42,5 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
-  },
-  "homepage": "https://github.com/RoseLuu/roseluu-Portfolio-React"
+  }
 }
