--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/RoseLuu/roseluu-Portfolio-React",
+  "homepage": "https://roseluu.github.io/roseluu-Portfolio-React/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
